Driver crashes with boost 1.52

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.3
    • Affects Version/s: None
    • Component/s: Internal Client
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      boost::threads must be either detach()ed or join()ed prior to destruction on newer versions of boost: https://svn.boost.org/trac/boost/ticket/6266.

      Patch:

      diff --git a/mongo-cxx-driver/src/mongo/util/background.cpp b/mongo-cxx-driver/src/mongo/util/background.cpp
      index 4fca89b..795ef7b 100644
      --- a/src/mongo/util/background.cpp
      +++ b/src/mongo/util/background.cpp
      @@ -82,6 +82,7 @@ namespace mongo {
       
           BackgroundJob& BackgroundJob::go() {
               boost::thread t( boost::bind( &BackgroundJob::jobBody , this, _status ) );
      +        t.detach();
               return *this;
           }
       
      
      

            Assignee:
            Matt Dannenberg (Inactive)
            Reporter:
            Mathias Stearn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: