SERVER-8684 make codebase compatible with boost 1.5 and newer